[gd_scene load_steps=19 format=3 uid="uid://dw6tq28finwin"]

[ext_resource type="Script" uid="uid://cpu4800dki5vl" path="res://entities/unit/unit.gd" id="1_w87tj"]
[ext_resource type="Texture2D" uid="uid://b77myehxl1v37" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0088.png" id="2_f5ot1"]
[ext_resource type="Script" uid="uid://btfmngh8138a5" path="res://components/health_component/health_component.gd" id="3_p0kfm"]
[ext_resource type="Script" uid="uid://dv81btkiw6lhb" path="res://components/shield_component/shield_component.gd" id="4_7pj5m"]
[ext_resource type="Script" uid="uid://de5einrf501o1" path="res://components/move_component/move_component.gd" id="4_f5ot1"]
[ext_resource type="PackedScene" uid="uid://cpt5jhmuhwtb3" path="res://components/healthbar/healthbar.tscn" id="4_h1r3i"]
[ext_resource type="Script" uid="uid://dq70318534hri" path="res://components/hurtbox_component/hurtbox_component.gd" id="6_6v3vn"]
[ext_resource type="PackedScene" uid="uid://csyjqx1kfgyga" path="res://components/shieldbar/shieldbar.tscn" id="7_a3s53"]
[ext_resource type="Script" uid="uid://vdex777wdxq7" path="res://components/effect_dispatcher/effect_dispatcher.gd" id="7_wi85q"]
[ext_resource type="PackedScene" uid="uid://biyi2ahrax8q0" path="res://components/effect_manager/freeze_manager/freeze_manager.tscn" id="8_wnbve"]
[ext_resource type="PackedScene" uid="uid://bgprglu5f47yc" path="res://components/effect_manager/burn_manager/burn_manager.tscn" id="9_guxrb"]
[ext_resource type="PackedScene" uid="uid://dswrwvp7e74ao" path="res://components/effect_manager/poison_manager/poison_manager.tscn" id="12_luavq"]
[ext_resource type="Script" uid="uid://c4cb5shumi5qd" path="res://components/hover_component/hover_component.gd" id="13_if3wr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_if3wr"]

[sub_resource type="LabelSettings" id="LabelSettings_if3wr"]
font_size = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v3vn"]
size = Vector2(16, 16)

[sub_resource type="Gradient" id="Gradient_6v3vn"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0.1, 0.1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_if3wr"]
size = Vector2(16, 16)

[node name="Unit" type="Node2D"]
script = ExtResource("1_w87tj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_f5ot1")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 2
z_as_relative = false
offset_left = -23.0
offset_top = -49.0
offset_right = 23.0
offset_bottom = -9.0
theme_override_styles/panel = SubResource("StyleBoxFlat_if3wr")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Unit Details"
label_settings = SubResource("LabelSettings_if3wr")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_p0kfm")

[node name="ShieldComponent" type="Node" parent="."]
script = ExtResource("4_7pj5m")

[node name="PositionComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_f5ot1")
actor = NodePath("..")

[node name="Healthbar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_h1r3i")]
z_index = 1
z_as_relative = false
offset_left = -6.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = -9.0
health_component = NodePath("../HealthComponent")

[node name="Shieldbar" parent="." node_paths=PackedStringArray("shield_component") instance=ExtResource("7_a3s53")]
z_index = 1
z_as_relative = false
offset_left = -6.0
offset_top = -13.0
offset_right = 6.0
offset_bottom = -11.0
shield_component = NodePath("../ShieldComponent")

[node name="SelectedIndicator" type="ColorRect" parent="."]
visible = false
z_index = 1
z_as_relative = false
offset_left = -1.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = -10.0

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("actor")]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_6v3vn")
actor = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_6v3vn")

[node name="BloodParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 120.0
gravity = Vector2(0, 500)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 2.0
scale_amount_max = 2.5
color = Color(1, 0, 0, 1)
color_ramp = SubResource("Gradient_6v3vn")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="EffectDispatcher" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox", "actor", "position_component", "shield_component", "health_component")]
script = ExtResource("7_wi85q")
hurtbox = NodePath("../HurtboxComponent")
actor = NodePath("..")
position_component = NodePath("../PositionComponent")
shield_component = NodePath("../ShieldComponent")
health_component = NodePath("../HealthComponent")

[node name="FreezeManager" parent="EffectDispatcher" instance=ExtResource("8_wnbve")]

[node name="BurnManager" parent="EffectDispatcher" instance=ExtResource("9_guxrb")]

[node name="PoisonManager" parent="EffectDispatcher" instance=ExtResource("12_luavq")]

[node name="HoverComponent" type="Area2D" parent="."]
script = ExtResource("13_if3wr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverComponent"]
shape = SubResource("RectangleShape2D_if3wr")
